gutenprint (5.2.7-1) unstable; urgency=low

  * New upstream stable release.
  * Upgrade to Standards Version 3.9.2 (no changes).
  * Drop inactive maintainers from Uploaders.

 -- Roger Leigh <rleigh@debian.org>  Tue, 03 May 2011 10:43:09 +0100

gutenprint (5.2.6-1) unstable; urgency=low

  * New upstream stable release.
  * Use source format 3.0 (quilt), drop dpatch support.
  * Upgrade to Standards Version 3.9.1 (no changes).
  * Drop unused --with-ijs configure argument.
  * debian/rules install-stamp rule depends on build-stamp
    rather than build (which is phony).

 -- Roger Leigh <rleigh@debian.org>  Sun, 15 Aug 2010 14:15:09 +0100

gutenprint (5.2.5-1) unstable; urgency=low

  * New upstream stable release. 
  * debian/control:
    - Update to standards version 3.8.4.
    - Build-Depend on libreadline-dev.
    - Use ${misc:Depends}.

 -- Roger Leigh <rleigh@debian.org>  Thu, 18 Feb 2010 21:32:05 +0000

gutenprint (5.2.4-1) unstable; urgency=low

  [ Roger Leigh ]
  * New upstream stable release. 
  * cups-driver-gutenprint: Depend on ghostscript-cups, required for
    Postscript/PDF printing. 

 -- Roger Leigh <rleigh@debian.org>  Sun, 02 Aug 2009 11:50:51 +0100

gutenprint (5.2.3-3) unstable; urgency=low

  * debian/control: cups-driver-gutenprint: Depend on cups-client since
    lpadmin and lpstat are used during postinst (Closes: #532880).

 -- Roger Leigh <rleigh@debian.org>  Sat, 13 Jun 2009 10:43:09 +0100

gutenprint (5.2.3-2) unstable; urgency=low

  * debian/rules: Update build and build-stamp dependencies (it doesn't
    matter if debian/control is changed when build is called).  This
    is already taken care of through the autoconfigure-stamp dependency.

 -- Roger Leigh <rleigh@debian.org>  Sat, 21 Feb 2009 12:49:23 +0000

gutenprint (5.2.3-1) experimental; urgency=low

  [ Roger Leigh ]
  * New upstream stable release.
  * debian/control:
    - Use ${source:Version} in place of ${binary:Version} for all