@@ -1,3 +1,0 @@
-debian/install/usr/lib/libgutenprint.so.*  usr/lib
-debian/install/usr/lib/gutenprint          usr/lib
-debian/install/usr/share/gutenprint/5.2    usr/share/gutenprint
