@@ -1,0 +1,3 @@
+debian/install/@LIBDIR@/libgutenprint.so.*  @LIBDIR@
+debian/install/@LIBDIR@/gutenprint          @LIBDIR@
+debian/install/usr/share/gutenprint/5.2     usr/share/gutenprint
