@@ -1,1 +1,0 @@
-debian/install/usr/lib/libgutenprintui2.so.*  usr/lib
