@@ -1,0 +1,1 @@
+debian/install/@LIBDIR@/libgutenprintui2.so.*  @LIBDIR@
