@@ -1,0 +1,3 @@
+debian/install/@LIBDIR@/libgutenprintui2.so         @LIBDIR@
+debian/install/@LIBDIR@/pkgconfig/gutenprintui2.pc  @LIBDIR@/pkgconfig
+debian/install/usr/include/gutenprintui2            usr/include
